<resources>
    <string name="app_name">Strong Lift</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lift_history">Strong Lift History</string>
    <string name="title_activity_lift_records">Strong Lift Records</string>
    <string name="menu_item_input">Input</string>
    <string name="menu_item_records">Records</string>
    <string name="menu_item_history">History</string>
    <string name="menu_item_exit">Exit</string>
    <string name="lift_bench">Bench Press</string>
    <string name="lift_deadlift">Deadlift</string>
    <string name="lift_squat">Squat</string>
    <string name="invalid_weight">Please enter a valid weight</string>
    <string name="filter_all">All lifts</string>
    <string name="liftLabel">Lift</string>
    <string name="repLabel">Rep</string>
    <string name="weightLabel">Weight</string>
    <string name="addButtonLabel">Add</string>
    <string name="onermLabel">1RM</string>
    <string name="dateLabel">Date</string>
</resources>
