<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/liftSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:spinnerMode="dropdown" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:text="@string/liftLabel"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"/>

        <TextView
            android:text="@string/repLabel"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/weightLabel"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center_vertical|center"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/onermLabel"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center_vertical|center"
            android:layout_height="wrap_content"
            android:maxLength="6"/>

        <TextView
            android:text="@string/dateLabel"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center_vertical|center"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ListView
        android:id="@+id/liftHistoryListView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />

</LinearLayout>
